# perf-lib

./: .gitignore  Makefile  Makefile.am  README.md  acinclude.m4  array.h  bitmap.c  bitmap.h  boot.sh  configure.ac  evlist.c  evlist.h  evsel.c  evsel.h  list.h  pmu.c  pmu.h  rdpmc.c  rdpmc.h  threadmap.c  threadmap.h  util.h
kmod/: Makefile.in  automake.mk  perf_profile_mod.c
lib/: array.h  automake.mk  bitmap.c  bitmap.h  cmd.c  cmd.h  evlist.c  evlist.h  evsel.c  evsel.h  inst.h  pmu.c  threadmap.h  util.h  xyarray.c  xyarray.h
test/: automake.mk  test-api.c
tools/: automake.mk  builtin-test.c  builtin.h  profile.c
